--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ permalink:        pretty
 title:            Kylie Stradley
 tagline:          ''
 description:      'Web Developer'
-url:              http://hyde.getpoole.com
+url:              kyfast.net
 
 author:
   name:           'Kylie Stradley'
