change capitalization on header

--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ pygments:         true
 permalink:        pretty
 
 # Setup
-title:            Kylie Stradley
+title:            kylie stradley
 tagline:          ''
-description:      'Web Developer'
+description:      'web developer'
 url:              kyfast.net
 
 author:
