maybe this will help with the rss feed errors. -worst web developer of all time, Kylie Stradley

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ permalink:        pretty
 title:            kylie stradley
 tagline:          'A Blog About a Developing Developer'
 description:      'web developer'
-url:              kyfast.net
+url:              http://kyfast.net
 name:             "Kylie's Blog"
 
 author:
