probably time to update my dependencies out of the stone age :joy:

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 # Dependencies
 markdown:         redcarpet
-pygments:         true
+highlighter:      true
+gems: [jekyll-paginate]
 
 # Permalinks
 permalink:        pretty
